--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -1232,6 +1232,16 @@ a-plane {
 		color: white;
 	}
 
+	@keyframes zoomIn {
+		0% {
+			transform: scale(0.8);
+		}
+
+		100% {
+			transform: scale(1);
+		}
+	}
+
 	#watchVideosButton {
 		position: fixed;
 		bottom: 20px;
