--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -1196,38 +1196,6 @@ a-plane {
 		z-index: 1002;
 	}
 
-	.floating-button.left {
-		border: 3px solid #f6c500;
-		left: 20px;
-	}
-
-	.floating-button2 {
-		position: absolute;
-		bottom: 20px;
-		width: 60px;
-		height: 60px;
-		border-radius: 50%;
-		box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		background-color: #4f7eba;
-		color: white;
-		font-size: 24px;
-		border: none;
-		cursor: pointer;
-		z-index: 1002;
-		box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
-	}
-
-	.floating-button.left2 {
-		display: block;
-		border: 3px solid white;
-		left: 20px;
-		box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
-		background-color: #4f7eba;
-	}
-
 	.floating-button.left2:hover {
 		color: white;
 	}
@@ -1244,35 +1212,13 @@ a-plane {
 
 	#watchVideosButton {
 		position: fixed;
-		bottom: 20px;
-		right: 20px;
-		width: 60px;
-		height: 60px;
-		padding: 0;
-		left: 40%; 
-		border-radius: 50%;
-		box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-		background-color: #b78f3f;
-		background-size: cover;
-		background-position: center;
-		border: none;
-		cursor: pointer;
+		bottom: 10px;  
+		left: 50%;     
+		transform: translateX(-50%); 
+		width: 60px;  
+		height: 65px; 
+		cursor: pointer; 
 		z-index: 1003;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		border: 3px solid rgba(255, 255, 255, 1);
-	}
-
-	#watchVideosButton::before {
-		content: "\25B6";
-		color: white;
-		font-size: 30px;
-		display: block;
-	}
-
-	#watchVideosButton:hover {
-		background-color: #f6c500;
 	}
 
 	#imgCondition {
@@ -1373,6 +1319,20 @@ a-plane {
 		justify-content: center;
 		align-items: center;
 	}
+
+	.lightbulb-icon {
+		position: fixed; 
+		bottom: 20px; 
+		left: 20px;  
+		width: 60px;  
+		height: 60px;
+		cursor: pointer; 
+		z-index: 1001;
+	}
+	
+	.lightbulb-icon:hover {
+		opacity: 0.6; 
+	}
 	
 	.info-box {
 		font-family: 'OldStandard', serif;
@@ -1391,15 +1351,15 @@ a-plane {
 	
 	.exit-button {
 		position: absolute; 
-		top: 20px; 
-		right: 20px; 
-		background-color: #585858; 
+		top: 30px; 
+		right: 10px; 
+		background-color: #272727; 
 		color: #fff;
 		border: none; 
 		border-radius: 50%; 
 		width: 40px; 
 		height: 40px; 
-		font-size: 20px; 
+		font-size: 15px; 
 		cursor: pointer; 
 		z-index: 1001;
 		display: flex; 
