--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -1212,13 +1212,23 @@ a-plane {
 
 	#watchVideosButton {
 		position: fixed;
-		bottom: 10px;  
+		bottom: 20px;  
 		left: 50%;     
 		transform: translateX(-50%); 
-		width: 60px;  
-		height: 65px; 
-		cursor: pointer; 
-		z-index: 1003;
+		font-family: 'OldStandard', serif;
+		padding: 10px 20px; 
+		background-color: #b2864d; 
+		color: white; 
+		border: none; 
+		border-radius: 5px;
+		font-size: 14px; 
+		cursor: pointer;
+		z-index: 1003; 
+		box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+	}
+	
+	#watchVideosButton:hover {
+		opacity: 0.8; /* Slight opacity change on hover */
 	}
 
 	#imgCondition {
