--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -321,7 +321,6 @@ button:hover {
 .access-body {
 	font-family: 'Inter', sans-serif;
 	background: url('../../assets/img/bulul-low-op.png') no-repeat center center fixed, #272626;
-
 	background-size: 300px;
 	display: flex;
 	justify-content: center;
@@ -1133,7 +1132,7 @@ a-plane {
 		font-size: 15px;
 		font-weight: bold;
 		background-color: #b78f3f;
-		font-family: 'OldStandard', serif;
+		font-family: 'Inter', sans-serif;	
 		padding: 10px;
 		border-radius: 5px;
 		box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
@@ -1215,9 +1214,9 @@ a-plane {
 		bottom: 20px;  
 		left: 50%;     
 		transform: translateX(-50%); 
-		font-family: 'OldStandard', serif;
+		font-family: 'Inter', sans-serif;		
 		padding: 10px 20px; 
-		background-color: #b2864d; 
+		background-image: url('/assets/img/button.png'); 
 		color: white; 
 		border: none; 
 		border-radius: 5px;
@@ -1228,7 +1227,7 @@ a-plane {
 	}
 	
 	#watchVideosButton:hover {
-		opacity: 0.8; /* Slight opacity change on hover */
+		opacity: 0.8; 
 	}
 
 	#imgCondition {
@@ -1238,38 +1237,23 @@ a-plane {
 		top: 80px;
 		right: 10px;
 		z-index: 1000;
-		background-color: #bb3d41;
-		padding: 10px;
 		border-radius: 5px;
+		background-image: url('/assets/img/button.png'); 
 		box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
 	}
 
 	#conditionLabel {
 		position: absolute;
 		top: 160px;
-		font-family: 'OldStandard', serif;
+		font-family: 'Inter', sans-serif;	
 		right: 10px;
 		color: white;
-		font-size: 14px;
+		font-size: 13px;
 		font-weight: bold;
-		background-color: #bb3d41;
+		background-image: url('/assets/img/button.png'); 
 		padding: 6px;
 		border-radius: 5px;
 		display: none;
-		box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
-	}
-
-	#result {
-		position: absolute;
-		top: 80px;
-		left: 10px;
-		color: white;
-		font-size: 15px;
-		font-weight: bold;
-		background-color: #b78f3f;
-		font-family: 'OldStandard', serif;
-		padding: 10px;
-		border-radius: 5px;
 		box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
 	}
 
@@ -1334,8 +1318,8 @@ a-plane {
 		position: fixed; 
 		bottom: 20px; 
 		left: 20px;  
-		width: 60px;  
-		height: 60px;
+		width: 70px;  
+		height: 70px;
 		cursor: pointer; 
 		z-index: 1001;
 	}
@@ -1345,7 +1329,7 @@ a-plane {
 	}
 	
 	.info-box {
-		font-family: 'OldStandard', serif;
+		font-family: 'Inter', sans-serif;	
 		background-color: #fff;
 		background-size: cover;
 		background-position: center;
@@ -1382,7 +1366,7 @@ a-plane {
 	}
 
 	.welcome-2 {
-		font-family: 'OldStandard', serif;
+		font-family: 'Inter', sans-serif;	
 		font-weight: bold;
 		margin-bottom: 10px;
 		margin-top: 10px;
@@ -1391,7 +1375,7 @@ a-plane {
 	}
 
 	.info-box-text {
-		font-family: 'OldStandard', serif;
+		font-family: 'Inter', sans-serif;	
 		font-size: 0.8em;
 		margin-bottom: 10px;
 		color: #555555;
