--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -318,6 +318,10 @@ button:hover {
 	border: 1.25px solid #073066;
 }
 
+.btn-radius {
+	border-radius: 30px;
+}
+
 .access-body {
 	font-family: 'Inter', sans-serif;
 	background: url('../../assets/img/bulul-low-op.png') no-repeat center center fixed, #272626;
@@ -634,18 +638,23 @@ main {
 }
 
 #video {
-	width: 100%;
-	max-width: 400px;
-	display: block;
-}
-
-#canvas {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100%;
-	height: 100%;
-	pointer-events: none;
+	width: 100vw;
+	height: 100vh;
+	object-fit: cover;
+	z-index: 1;
+}
+
+#canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 2;
+  pointer-events: none;
 }
 
 a-scene {
@@ -1216,14 +1225,15 @@ a-plane {
 		transform: translateX(-50%); 
 		font-family: 'Inter', sans-serif;		
 		padding: 10px 20px; 
-		background-image: url('/assets/img/button.png'); 
+		background-image: url('../assets/img/button.png'); 
 		background-color: #a67c52;
 		color: white; 
 		border: none; 
 		border-radius: 5px;
 		font-size: 14px; 
 		cursor: pointer;
-		z-index: 1003; 
+		z-index: 1; 
+		display: block; /* Make sure the button is displayed */
 		box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
 	}
 	
@@ -1768,4 +1778,299 @@ a-plane {
 		font-family: Arial, sans-serif;
 		z-index: 10;
 	}
+}
+
+.btn-secondary {
+	background: #eee;
+	border-color: #eee;
+	color: #111
+}
+
+#sidebar_menu {
+	transition: all .5s ease 0s;
+	-webkit-transition: all .5s ease 0s;
+	-moz-transition: all .5s ease 0s;
+
+}
+
+.nav-item,
+.nav-item>a {
+	position: relative
+}
+
+#wrapper {
+	width: 100vw;  /* Use viewport width to ensure full width */
+    height: 100vh; /* Use viewport height to ensure full height */
+    position: relative;
+
+}
+
+#header {
+	height: 60px;
+	background: #272626;
+	margin-bottom: 25px;
+	position: relative;
+	z-index: 99
+}
+
+#header .container {
+	position: relative
+}
+
+#header #logo {
+	display: inline-block;
+	height: 35px;
+	margin: 15px 30px 15px 0;
+	float: left
+}
+
+#header #logo img {
+	height: auto;
+	width: 150px;
+	margin-right: 10px;
+	float: left
+}
+
+#mobile_menu {
+	padding: 0;
+	color: #fff;
+	cursor: pointer;
+	position: absolute;
+	margin-top: 10px;
+	left: auto;
+	z-index: 4;
+	display: none
+}
+
+#mobile_menu i {
+	margin: 0;
+	font-size: 18px
+}
+
+#header_menu {
+	height: 65px;
+	margin: 0;
+	float: left
+}
+
+#header_menu ul.header_menu-list {
+	list-style: none;
+	padding: 0;
+	display: block
+}
+
+#header_menu ul.header_menu-list .nav-item {
+	display: inline-block;
+	margin: 0 3px;
+	position: relative
+}
+
+#header_menu ul.header_menu-list .nav-item>a {
+	height: 65px;
+	line-height: 65px;
+	margin: 0;
+	padding: 0 20px;
+	color: #fff;
+	display: inline-block;
+	font-size: 14px;
+	font-weight: 400;
+	letter-spacing: 1px;
+	text-transform: uppercase
+}
+
+#header_menu ul.header_menu-list .nav-item:hover>a {
+	color: #f6c500
+}
+
+.header_menu-list .nav-item.active a  {
+	border-bottom: 4px solid #f6c500; /* Change color and thickness as needed */
+  }
+
+#header_right {
+	position: absolute;
+	top: 10px;
+	right: 15px
+}
+
+#sidebar_menu_bg {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: rgba(28, 28, 28, .6);
+	z-index: 100;
+	display: none;
+}
+
+#sidebar_menu_bg.active {
+	display: block
+}
+
+#sidebar_menu {
+	position: fixed;
+	z-index: 101;
+	left: -400px;
+	opacity: 0;
+	top: 0;
+	margin-top: -40px;
+	bottom: 0;
+	overflow-y: auto;
+	width: 300px;
+	padding: 20px;
+	background: #111;
+	box-shadow: 0 0 30px rgba(0, 0, 0, .3);
+	color: #ccc
+	
+}
+
+#sidebar_menu.active {
+	left: 0;
+	z-index: 1200;
+	opacity: 1
+}
+
+
+
+#sidebar_menu a {
+	color: #ccc
+}
+
+#sidebar_menu a:hover {
+	color: #fff
+}
+
+#sidebar_menu .sidebar_menu-list {
+	font-size: 16px;
+	margin-top: 10px
+}
+
+#sidebar_menu .sidebar_menu-list>.nav-item {
+	display: block;
+	width: 100%;
+	border-bottom: 1px solid #222;
+	position: relative
+}
+
+#sidebar_menu .sidebar_menu-list>.nav-item>.nav-link {
+	display: block;
+	padding: 15px 0;
+	color: #fff
+}
+
+#sidebar_menu .sidebar_menu-list>.nav-item>.toggle-submenu {
+	position: absolute;
+	top: 5px;
+	right: -10px;
+	padding: 10px;
+	z-index: 3;
+	cursor: pointer
+}
+
+#sidebar_menu .sidebar_menu-list>.nav-item>.toggle-submenu:hover {
+	color: #3e8afa
+}
+
+#sidebar_menu .sidebar_menu-list>.nav-item .nav {
+	margin-bottom: 20px
+}
+
+#sidebar_menu .sidebar_menu-list>.nav-item .nav>.nav-item {
+	display: block;
+	width: 49%;
+	margin-right: 1%;
+	float: left
+}
+
+#sidebar_menu .sidebar_menu-list>.nav-item .nav>.nav-item>.nav-link {
+	font-size: 14px;
+	padding: 10px 0;
+	color: #aaa
+}
+
+@media screen and (min-width: 1681px) {
+	.container {
+		max-width: 1600px
+	}
+}
+
+@media screen and (max-width: 1680px) {
+	.container {
+		max-width: 1400px
+	}
+}
+
+@media screen and (max-width: 1400px) {
+	.container {
+		max-width: 1200px
+	}
+
+	#header_menu ul.header_menu-list .nav-item {
+		margin-right: 0
+	}
+}
+
+@media screen and (max-width: 1199px) {
+
+	#header {
+		height: 80px;
+		text-align: center
+	}
+
+	#header .container {
+		padding-left: 0;
+		padding-right: 0
+	}
+
+	#header_menu ul.header_menu-list {
+		display: none
+	}
+
+	#header_right {
+		position: static;
+		top: 0
+	}
+
+	#mobile_menu {
+		top: 0;
+		width: 60px;
+		text-align: center;
+		left: 0;
+		display: block
+	}
+
+	#mobile_menu i {
+		font-size: 20px;
+		line-height: 60px;
+		height: 60px
+	}
+
+	#header #logo {
+		height: 30px;
+		width: 240px;
+		text-align: center;
+		margin: 15px 0;
+		position: absolute;
+		font-size: 0;
+		left: 50%;
+		margin-left: -120px
+	}
+
+	#header #logo img {
+		display: inline-block;
+		float: none;
+		vertical-align: top
+	}
+}
+
+@media (min-width: 240px) and (max-width: 479px) {
+
+	#header #logo img {
+		margin-right: 0 !important
+	}
+
+    #header {
+		top: 0;
+        height: 80px;
+    }
 }
