--- a/res/css/aboutStyle.css
+++ b/res/css/aboutStyle.css
@@ -1267,6 +1267,38 @@ a:hover {
 		overflow: hidden
 	}
 
+  #footer {
+    height: 200px;
+  }
+
+  .footer-logo {
+    margin-left: -10px;
+  }
+
+  #footer .footer-about,
+  #footer .footer-notice {
+    float: none;
+    width: 100%;
+    margin-bottom: 15px;
+  }
+
+  #footer .footer-logo-block {
+    justify-content: center;
+    left: 60px;
+    margin-top: 10px;
+    width: auto;
+  }
+
+  #footer {
+    padding: 15px 10px;
+    font-size: 16px;
+  }
+
+  #footer .copyright {
+    text-align: center;
+    margin-left: -60px;
+  }
+
 	.dp-i-c-stick .btn:nth-child(1) {
 		width: 54%;
 		margin-right: 1% !important;
