--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -1245,7 +1245,7 @@ a-plane {
 		max-width: 50%;
 		height: 72px;
 		position: absolute;
-		top: 80px;
+		top: 85px;
 		right: 10px;
 		z-index: 5;
 		border-radius: 5px;
@@ -1255,15 +1255,15 @@ a-plane {
 
 	#conditionLabel {
 		position: absolute;
-		top: 160px;
+		top: 165px;
 		font-family: 'Inter', sans-serif;	
 		right: 10px;
 		z-index: 5;
 		color: white;
-		font-size: 13px;
+		font-size: 12px;
 		font-weight: bold;
 		background-image: url('/assets/img/button.png'); 
-		padding: 6px;
+		padding: 5px;
 		border-radius: 5px;
 		display: none;
 		box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
@@ -1359,7 +1359,7 @@ a-plane {
 		position: absolute; 
 		top: 30px; 
 		right: 10px; 
-		background-color: #272727; 
+		background-color: #a7a7a7; 
 		color: #fff;
 		border: none; 
 		border-radius: 50%; 
